Migrate from DWT to MODWT Implementation (#156)