@@ -2,312 +2,276 @@ package ai.prophetizo.demo;
 
 import ai.prophetizo.wavelet.*;
 import ai.prophetizo.wavelet.api.*;
-import ai.prophetizo.wavelet.memory.ffm.*;
+import ai.prophetizo.wavelet.modwt.*;
+import ai.prophetizo.wavelet.memory.*;
+import ai.prophetizo.wavelet.modwt.streaming.MODWTStreamingDenoiser;
 
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.ValueLayout;
 import java.util.Random;
 
 /**
- * Comprehensive demonstration of Foreign Function & Memory (FFM) API features.
- * Shows advanced memory management, zero-copy operations, and performance benefits.
+ * Demonstration of memory-efficient MODWT operations.
+ * Shows how MODWT can be used with memory pooling and efficient patterns.
  * 
- * Requires Java 23+ with --enable-native-access=ALL-UNNAMED flag.
+ * Note: FFM (Foreign Function & Memory) API integration with MODWT
+ * is planned for future releases.
  */
 public class FFMDemo {
     
     public static void main(String[] args) {
-        System.out.println("VectorWave FFM (Foreign Function & Memory) API Demo");
-        System.out.println("===================================================\n");
+        System.out.println("VectorWave Memory-Efficient MODWT Demo");
+        System.out.println("======================================\n");
         
-        // Demo 1: Basic FFM usage
-        basicFFMUsage();
+        System.out.println("Note: Full FFM integration with MODWT is planned for future releases.");
+        System.out.println("This demo shows memory-efficient MODWT patterns currently available.\n");
         
-        // Demo 2: Memory pool management
-        memoryPoolManagement();
+        // Demo 1: Basic MODWT with memory pooling
+        basicMODWTWithMemoryPool();
         
-        // Demo 3: Zero-copy processing
-        zeroCopyProcessing();
+        // Demo 2: Batch processing for memory efficiency
+        batchProcessingDemo();
         
-        // Demo 4: Streaming with FFM
-        streamingFFMDemo();
+        // Demo 3: Streaming MODWT for large datasets
+        streamingMODWTDemo();
         
-        // Demo 5: Performance comparison
+        // Demo 4: Performance comparison
         performanceComparison();
         
-        // Demo 6: Advanced memory segment operations
-        advancedMemorySegmentOps();
+        // Demo 5: Memory usage analysis
+        memoryUsageAnalysis();
     }
     
-    private static void basicFFMUsage() {
-        System.out.println("1. Basic FFM Usage");
-        System.out.println("------------------");
+    private static void basicMODWTWithMemoryPool() {
+        System.out.println("1. Basic MODWT with Memory Pooling");
+        System.out.println("----------------------------------");
         
         double[] signal = generateSignal(1024);
         Wavelet wavelet = new Haar();
         
-        // Drop-in replacement for WaveletTransform
-        try (FFMWaveletTransform ffm = new FFMWaveletTransform(wavelet)) {
+        // Create MODWT transform
+        MODWTTransform transform = new MODWTTransform(wavelet, BoundaryMode.PERIODIC);
+        
+        // Use memory pooling for efficient memory management
+        // Note: AlignedMemoryPool has internal usage - for demo we'll show the concept
+        try {
             // Forward transform
-            TransformResult result = ffm.forward(signal);
+            MODWTResult result = transform.forward(signal);
             System.out.println("Forward transform completed:");
+            System.out.println("  Signal length: " + signal.length);
             System.out.println("  Approximation coeffs: " + result.approximationCoeffs().length);
             System.out.println("  Detail coeffs: " + result.detailCoeffs().length);
+            System.out.println("  Same length preserved: " + 
+                (signal.length == result.approximationCoeffs().length));
             
             // Inverse transform
-            double[] reconstructed = ffm.inverse(result);
+            double[] reconstructed = transform.inverse(result);
             System.out.println("Inverse transform completed");
             
             // Verify reconstruction
             double error = calculateRMSE(signal, reconstructed);
             System.out.printf("Reconstruction RMSE: %.2e\n", error);
             
-            // Combined forward-inverse (optimized path)
-            double[] combined = ffm.forwardInverse(signal);
-            double combinedError = calculateRMSE(signal, combined);
-            System.out.printf("Combined transform RMSE: %.2e\n", combinedError);
+            // Memory pooling is handled internally by MODWT for efficiency
+            System.out.println("\nMemory efficiency:");
+            System.out.println("  MODWT uses internal memory pooling for performance");
+            System.out.println("  No manual pool management required");
+            
+        } finally {
+            // Cleanup handled automatically
         }
         
         System.out.println();
     }
     
-    private static void memoryPoolManagement() {
-        System.out.println("2. Memory Pool Management");
-        System.out.println("-------------------------");
+    private static void batchProcessingDemo() {
+        System.out.println("2. Batch Processing for Memory Efficiency");
+        System.out.println("-----------------------------------------");
         
-        // Create custom memory pool
-        FFMMemoryPool pool = new FFMMemoryPool();
+        // Create batch of signals with various lengths (MODWT handles any length)
+        int[] signalLengths = {100, 256, 333, 512, 777, 1024};
+        double[][] signals = new double[signalLengths.length][];
         
-        try {
-            // Create transform using the pool
-            FFMWaveletTransform ffm = new FFMWaveletTransform(Daubechies.DB4, pool);
+        for (int i = 0; i < signalLengths.length; i++) {
+            signals[i] = generateSignal(signalLengths[i]);
+            System.out.printf("  Signal %d: %d samples (not power of 2!)\n", i, signalLengths[i]);
+        }
+        
+        // Process batch using MODWT
+        MODWTTransform transform = new MODWTTransform(Daubechies.DB4, BoundaryMode.PERIODIC);
+        long startTime = System.nanoTime();
+        
+        MODWTResult[] results = new MODWTResult[signals.length];
+        for (int i = 0; i < signals.length; i++) {
+            results[i] = transform.forward(signals[i]);
+        }
+        
+        long batchTime = System.nanoTime() - startTime;
+        System.out.printf("\nBatch processing completed in %.2f ms\n", batchTime / 1_000_000.0);
+        
+        // Verify all signals preserved their length
+        System.out.println("\nLength preservation check:");
+        for (int i = 0; i < signals.length; i++) {
+            System.out.printf("  Signal %d: input=%d, output=%d (preserved: %s)\n",
+                i, signals[i].length, results[i].getSignalLength(),
+                signals[i].length == results[i].getSignalLength() ? "YES" : "NO");
+        }
+        
+        System.out.println();
+    }
+    
+    private static void streamingMODWTDemo() {
+        System.out.println("3. Streaming MODWT for Large Datasets");
+        System.out.println("-------------------------------------");
+        
+        // Use MODWTStreamingDenoiser for streaming applications
+        MODWTStreamingDenoiser denoiser = new MODWTStreamingDenoiser.Builder()
+            .wavelet(new Haar())
+            .boundaryMode(BoundaryMode.PERIODIC)
+            .bufferSize(256)
+            .build();
+        
+        // Subscribe to denoised results
+        denoiser.subscribe(new java.util.concurrent.Flow.Subscriber<double[]>() {
+            private int blockCount = 0;
             
-            // Pre-warm the pool
-            pool.prewarm(64, 128, 256, 512, 1024);
-            System.out.println("Pool pre-warmed with common sizes");
-            
-            // Perform multiple transforms
-            Random random = new Random(42);
-            for (int i = 0; i < 100; i++) {
-                int size = 1 << (6 + random.nextInt(5)); // 64 to 1024
-                double[] signal = generateSignal(size);
-                
-                TransformResult result = ffm.forward(signal);
-                ffm.inverse(result);
+            @Override
+            public void onSubscribe(java.util.concurrent.Flow.Subscription subscription) {
+                subscription.request(Long.MAX_VALUE);
             }
             
-            // Show pool statistics
-            FFMMemoryPool.PoolStatistics stats = pool.getStatistics();
-            System.out.println("\nPool statistics after 100 operations:");
-            System.out.println(stats.toDetailedString());
-            
-            // Show efficiency metrics
-            System.out.printf("Memory efficiency: %.1f%%\n", 
-                stats.hitRate() * 100);
-            System.out.printf("Average allocation size: %.0f bytes\n", 
-                (double)stats.totalBytesAllocated() / stats.totalAllocations());
-            
-            ffm.close();
-        } finally {
-            pool.close();
-        }
-        
-        System.out.println();
-    }
-    
-    private static void zeroCopyProcessing() {
-        System.out.println("3. Zero-Copy Processing");
-        System.out.println("-----------------------");
-        
-        // Create a large signal
-        double[] largeSignal = generateSignal(8192);
-        
-        try (FFMWaveletTransform ffm = new FFMWaveletTransform(Symlet.SYM4)) {
-            // Process slice without copying
-            int offset = 2048;
-            int length = 4096;
-            
-            System.out.printf("Processing slice [%d:%d] of %d-element array\n", 
-                offset, offset + length, largeSignal.length);
-            
-            // Zero-copy transform on slice
-            TransformResult sliceResult = ffm.forward(largeSignal, offset, length);
-            System.out.println("Zero-copy transform completed");
-            System.out.println("  No array copying required");
-            System.out.println("  Direct memory segment access");
-            
-            // Process using memory segments directly
-            MemorySegment signalSegment = MemorySegment.ofArray(largeSignal);
-            TransformResult segmentResult = ffm.forwardSegment(signalSegment, largeSignal.length);
-            System.out.println("\nDirect memory segment processing completed");
-            
-            // Compare results
-            double[] slice1 = sliceResult.approximationCoeffs();
-            double[] full1 = segmentResult.approximationCoeffs();
-            System.out.printf("Results match: %s\n", 
-                compareArrays(slice1, 0, full1, offset/2, length/2));
-        }
-        
-        System.out.println();
-    }
-    
-    private static void streamingFFMDemo() {
-        System.out.println("4. Streaming with FFM");
-        System.out.println("---------------------");
-        
-        int blockSize = 256;
-        
-        try (FFMStreamingTransform stream = new FFMStreamingTransform(new Haar(), blockSize)) {
-            System.out.println("Streaming transform created:");
-            System.out.println("  Block size: " + blockSize);
-            System.out.println("  Zero-copy processing enabled");
-            
-            // Simulate real-time data arrival
-            int totalSamples = 0;
-            int blocksProcessed = 0;
-            Random random = new Random(42);
-            
-            for (int batch = 0; batch < 10; batch++) {
-                // Generate chunk of varying size
-                int chunkSize = 50 + random.nextInt(100);
-                double[] chunk = generateSignal(chunkSize);
-                
-                // Process chunk
-                stream.processChunk(chunk, 0, chunkSize);
-                totalSamples += chunkSize;
-                
-                // Check for complete blocks
-                while (stream.hasCompleteBlock()) {
-                    TransformResult result = stream.getNextResult();
-                    blocksProcessed++;
-                    
-                    if (blocksProcessed == 1) {
-                        System.out.println("\nFirst block result:");
-                        System.out.println("  Approx energy: " + 
-                            calculateEnergy(result.approximationCoeffs()));
-                        System.out.println("  Detail energy: " + 
-                            calculateEnergy(result.detailCoeffs()));
-                    }
+            @Override
+            public void onNext(double[] denoisedBlock) {
+                blockCount++;
+                if (blockCount == 1) {
+                    System.out.println("\nFirst denoised block received:");
+                    System.out.println("  Block size: " + denoisedBlock.length);
+                    System.out.println("  Energy: " + calculateEnergy(denoisedBlock));
                 }
             }
             
-            System.out.printf("\nProcessed %d samples in %d blocks\n", 
-                totalSamples, blocksProcessed);
-            System.out.println("Remaining samples buffered: " + 
-                (totalSamples - blocksProcessed * blockSize));
+            @Override
+            public void onError(Throwable throwable) {
+                System.err.println("Error: " + throwable.getMessage());
+            }
+            
+            @Override
+            public void onComplete() {
+                System.out.println("\nStreaming completed. Total blocks: " + blockCount);
+            }
+        });
+        
+        // Simulate streaming data
+        System.out.println("Simulating streaming data...");
+        Random random = new Random(42);
+        int totalSamples = 0;
+        
+        for (int i = 0; i < 10; i++) {
+            // Generate varying size chunks (MODWT handles any size)
+            int chunkSize = 50 + random.nextInt(200);
+            double[] chunk = generateSignal(chunkSize);
+            double[] denoised = denoiser.denoise(chunk);
+            totalSamples += chunkSize;
         }
         
+        // Close denoiser
+        denoiser.close();
+        
+        System.out.printf("\nProcessed %d total samples\n", totalSamples);
+        System.out.printf("  Noise level estimated: %.4f\n", denoiser.getEstimatedNoiseLevel());
         System.out.println();
     }
     
     private static void performanceComparison() {
-        System.out.println("5. Performance Comparison");
+        System.out.println("4. Performance Comparison");
         System.out.println("-------------------------");
         
-        int[] sizes = {256, 512, 1024, 2048, 4096};
+        int[] sizes = {100, 256, 777, 1024, 3333}; // MODWT handles any size!
         Wavelet wavelet = Daubechies.DB4;
         int iterations = 100;
         
-        System.out.println("Comparing traditional vs FFM implementation:");
+        System.out.println("MODWT Performance Analysis:");
         System.out.println("Wavelet: " + wavelet.name());
         System.out.println("Iterations: " + iterations);
         System.out.println();
         
-        System.out.println("Size  | Traditional (ms) | FFM (ms) | Speedup | Pool Hit Rate");
-        System.out.println("------|------------------|----------|---------|-------------");
+        System.out.println("Size  | Time (ms) | Time/Sample (ns) | Shift-Invariant");
+        System.out.println("------|-----------|------------------|----------------");
         
-        // Create shared memory pool
-        FFMMemoryPool pool = new FFMMemoryPool();
-        pool.prewarm(sizes);
+        MODWTTransform transform = new MODWTTransform(wavelet, BoundaryMode.PERIODIC);
         
-        try {
-            for (int size : sizes) {
-                double[] signal = generateSignal(size);
-                
-                // Traditional timing
-                WaveletTransform traditional = new WaveletTransform(wavelet, BoundaryMode.PERIODIC);
-                long tradTime = timeTransform(traditional, signal, iterations);
-                
-                // FFM timing
-                FFMWaveletTransform ffm = new FFMWaveletTransform(wavelet, pool);
-                long ffmTime = timeFFMTransform(ffm, signal, iterations);
-                
-                // Get pool statistics
-                FFMMemoryPool.PoolStatistics stats = pool.getStatistics();
-                double hitRate = stats.hitRate();
-                
-                // Display results
-                double speedup = (double)tradTime / ffmTime;
-                System.out.printf("%5d | %16.2f | %8.2f | %7.2fx | %5.1f%%\n",
-                    size, tradTime/1e6, ffmTime/1e6, speedup, hitRate * 100);
-                
-                ffm.close();
+        for (int size : sizes) {
+            double[] signal = generateSignal(size);
+            
+            // Time MODWT
+            long startTime = System.nanoTime();
+            for (int i = 0; i < iterations; i++) {
+                MODWTResult result = transform.forward(signal);
+                transform.inverse(result);
             }
-        } finally {
-            pool.close();
+            long totalTime = System.nanoTime() - startTime;
+            
+            double timeMs = totalTime / 1_000_000.0;
+            double timePerSample = (totalTime / iterations) / (double)size;
+            
+            System.out.printf("%5d | %9.2f | %16.2f | YES\n",
+                size, timeMs, timePerSample);
         }
         
-        System.out.println("\nBenefits of FFM implementation:");
-        System.out.println("  - Reduced GC pressure from off-heap memory");
-        System.out.println("  - Better cache locality with SIMD alignment");
-        System.out.println("  - Zero-copy operations on slices");
-        System.out.println("  - Efficient memory pooling");
+        System.out.println("\nMODWT Advantages:");
+        System.out.println("  - Works with ANY signal length (not just powers of 2)");
+        System.out.println("  - Shift-invariant (translation-invariant)");
+        System.out.println("  - No downsampling = same length output");
+        System.out.println("  - Perfect for time series analysis");
+        
+        // Show performance info
+        var perfInfo = transform.getPerformanceInfo();
+        System.out.println("\n" + perfInfo.description());
         
         System.out.println();
     }
     
-    private static void advancedMemorySegmentOps() {
-        System.out.println("6. Advanced Memory Segment Operations");
-        System.out.println("-------------------------------------");
+    private static void memoryUsageAnalysis() {
+        System.out.println("5. Memory Usage Analysis");
+        System.out.println("------------------------");
         
-        try (FFMMemoryPool pool = new FFMMemoryPool()) {
-            // Allocate SIMD-aligned memory
-            int size = 1024;
-            MemorySegment aligned = pool.acquire(size);
+        // Compare memory usage for different signal sizes
+        int[] sizes = {100, 1000, 10000};
+        
+        System.out.println("Signal Size | MODWT Memory | DWT Memory (if power of 2) | Savings");
+        System.out.println("------------|--------------|----------------------------|--------");
+        
+        for (int size : sizes) {
+            // MODWT memory: input + 2 * output (same size)
+            long modwtMemory = size * 8 * 3; // 3 arrays of doubles
             
-            System.out.println("Allocated SIMD-aligned memory:");
-            System.out.println("  Size: " + size + " doubles");
-            System.out.println("  Bytes: " + aligned.byteSize());
-            System.out.println("  Address alignment: " + 
-                (aligned.address() % 64));
+            // DWT would need next power of 2
+            int dwtSize = nextPowerOfTwo(size);
+            long dwtMemory = dwtSize * 8 * 3;
             
-            // Fill with test data
-            for (int i = 0; i < size; i++) {
-                aligned.setAtIndex(ValueLayout.JAVA_DOUBLE, i, 
-                    Math.sin(2 * Math.PI * i / size));
-            }
+            double savings = (dwtSize > size) ? 
+                ((double)(dwtMemory - modwtMemory) / dwtMemory * 100) : 0;
             
-            // Create FFM transform with the pool
-            FFMWaveletTransform ffm = new FFMWaveletTransform(new Haar(), pool);
-            
-            // Process the memory segment directly
-            TransformResult result = ffm.forwardSegment(aligned, size);
-            System.out.println("\nProcessed memory segment directly:");
-            System.out.println("  No array allocation required");
-            System.out.println("  Direct SIMD-aligned access");
-            
-            // Demonstrate scoped allocation
-            FFMWaveletOps ops = new FFMWaveletOps(pool);
-            double[] signal = generateSignal(512);
-            double[] filters = {0.5, 0.5}; // Simple averaging filter
-            
-            double[] scopedResult = ops.forwardInverseScoped(
-                signal, filters, filters, filters, filters);
-            
-            System.out.println("\nScoped allocation demo:");
-            System.out.println("  All intermediate memory automatically freed");
-            System.out.println("  No manual memory management required");
-            
-            // Explicit close for demonstration purposes
-            // In production code, let try-with-resources handle this
-            ops.close();
-            // pool.close() is handled by try-with-resources
+            System.out.printf("%11d | %12d | %26d | %6.1f%%\n",
+                size, modwtMemory, dwtMemory, savings);
         }
         
-        System.out.println("\nFFM API requirements:");
-        System.out.println("  - Java 23 or later");
-        System.out.println("  - JVM flag: --enable-native-access=ALL-UNNAMED");
-        System.out.println("  - Automatic fallback to traditional implementation if unavailable");
+        System.out.println("\nMODWT Memory Advantages:");
+        System.out.println("  - No padding to power-of-2 required");
+        System.out.println("  - Direct processing of arbitrary-length signals");
+        System.out.println("  - Predictable memory usage");
+        System.out.println("  - Better cache utilization for non-power-of-2 signals");
+        
+        // Memory pooling in MODWT
+        System.out.println("\nMemory Pool Usage in MODWT:");
+        System.out.println("  MODWT internally uses AlignedMemoryPool for:");
+        System.out.println("    - SIMD-aligned memory allocation");
+        System.out.println("    - Efficient memory reuse");
+        System.out.println("    - Automatic cleanup");
+        System.out.println("  Benefits:");
+        System.out.println("    - Reduced allocation overhead");
+        System.out.println("    - Better cache utilization");
+        System.out.println("    - Improved SIMD performance");
+        
+        System.out.println();
     }
     
     // Helper methods
@@ -342,44 +306,14 @@ public class FFMDemo {
         return energy;
     }
     
-    private static boolean compareArrays(double[] a, int aOffset, double[] b, int bOffset, int length) {
-        for (int i = 0; i < length; i++) {
-            if (Math.abs(a[aOffset + i] - b[bOffset + i]) > 1e-10) {
-                return false;
-            }
-        }
-        return true;
-    }
-    
-    private static long timeTransform(WaveletTransform transform, double[] signal, int iterations) {
-        // Warmup
-        for (int i = 0; i < 10; i++) {
-            TransformResult result = transform.forward(signal);
-            transform.inverse(result);
-        }
-        
-        // Time
-        long start = System.nanoTime();
-        for (int i = 0; i < iterations; i++) {
-            TransformResult result = transform.forward(signal);
-            transform.inverse(result);
-        }
-        return System.nanoTime() - start;
-    }
-    
-    private static long timeFFMTransform(FFMWaveletTransform transform, double[] signal, int iterations) {
-        // Warmup
-        for (int i = 0; i < 10; i++) {
-            TransformResult result = transform.forward(signal);
-            transform.inverse(result);
-        }
-        
-        // Time
-        long start = System.nanoTime();
-        for (int i = 0; i < iterations; i++) {
-            TransformResult result = transform.forward(signal);
-            transform.inverse(result);
-        }
-        return System.nanoTime() - start;
+    private static int nextPowerOfTwo(int n) {
+        n--;
+        n |= n >> 1;
+        n |= n >> 2;
+        n |= n >> 4;
+        n |= n >> 8;
+        n |= n >> 16;
+        n++;
+        return n;
     }
 }
